--- a/main.css
+++ b/main.css
@@ -15,3 +15,40 @@
     width: 300px;
     padding: 10px;
   }
+
+  body {
+    background-color:rgb(37, 34, 34);
+  }
+
+  p {
+    color: aliceblue;
+  }
+
+  h1{
+    color: aliceblue;
+  }
+
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
