--- a/A3/main.css
+++ b/A3/main.css
@@ -62,10 +62,10 @@
     padding: 0;
     overflow: hidden;
     background-color: #333;
-  }
+   }
   
   li {
-    float: left;
+    float: right;
   }
   
   li a {
@@ -74,6 +74,10 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+  }
+
+  li image {
+    padding: 14px 16px;
   }
   
   li a:hover {
@@ -107,3 +111,4 @@ video {
   margin: 0 auto;
   
 }
+
